# examples-2021

./: .gitignore  README.md  Untitled Diagram.drawio
C/: printnum.c  ucat.c
C/endian/: endian.c
C/free-rtos/: Makefile  README.md
C/mqtt/: Makefile  README.md  dumqtt.c  mqtt.c
C/seteuid/: README.md  r.c  trojan.c
C/ucat/: .gitignore  Makefile  README.md  main.c  tc.sh  test.sh
DNA/dnacodec/: dnacodec.go  dnacodec_test.go
DNA/docs/: dna-fountain.md  hist.txt
DNA/tests/: art-illumina-test.sh  decode-wgsim.sh  dna-fountain-test.sh  dnacodec-test.sh  wgsim_test.sh
DNA/wgsim/: Makefile  wgsim.c  wgsim_test.sh
Go/: Dockerfile.slackgist  README.md  build.go  entrypoint.sh  go.mod  go.sum  xkcd.go
Go/api/: kuberp.pb.go  kuberp.proto  kuberp.swagger.json  slackgist.pb.gw.go
Go/base64/: main.go
Go/boltdb/: main.go
Go/jp/: jp.go  (+3 more)
Javascript/: astra.js  connect-database.js  package.json
Netlify/: update_netlify_dns.py
Python/: README.md  basicbq.py  do_copyifnotexist.py  do_imgcvdiff.py  do_imglevcmp.py  do_md5checkdir.py  do_measure_img_similar.py
Rust/: README.md
Rust/httpget1/: .gitignore  Cargo.toml
Rust/httpget1/src/: main.rs
Shell/: do_backup.sh  do_find_dupes.sh  do_heroku.sh  do_syncbooks.sh  do_ttyd_ngrok.sh  gcloud_shell_ssh.sh  install-docker.sh  lcw.awk  lcw.sh  lscolors.csh  lscolors.sh  mkxtar.sh  nodupepath.sh  runubu.bat  uniq-commands.sh
Texts/: awk.md  make.md  parallel.md  words4_create.sh  words5.txt
V/: README.md  csv2json.v
txt/: loomings.txt  moby.txt  words.txt  words1.txt  words2.txt  words2_create.sh  words4.txt
(+451 files in other folders)
