[package]
name = "httpget1"
version = "0.1.0"
authors = ["bob bae <bob.bae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
